adding future ability to include other state data

--- a/_data/atlanta-police-department.yml
+++ b/_data/atlanta-police-department.yml
@@ -10,6 +10,7 @@
       datasource: overall_crime
       targetBenchmark:
       targetLabel:
+      useCsvMetricForXaxisLabel:
       series-grouping: false
       series1-metric: Result
       series1-type: column
@@ -17,6 +18,7 @@
       series1-label: Year Over Year Change
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
 
     - title: Change in crime By Police Zone
       summary: APD organizes its field division into 6 administrative zones.  APD actively monitors changes and compares crime across these different zones as part of its improvement efforts.  The YTD change in major crimes, as defined by the FBI, compared to the year before for each zone is shown below.
@@ -34,7 +36,7 @@
       series1-label: Year Over Year Change
       series1-min:
       series1-max:
-
+      series1-useCsvMetricForXaxisLabel:
 
 - group-title: Section II - e911 Call Center
   group-description:
@@ -48,16 +50,18 @@
       datasource: e911_call_center
       targetBenchmark:
       targetLabel:
-      series-grouping: false
+      series-grouping: true
       series1-metric: Volume
       series1-type: column
       series1-format: number
       series1-label: Total Dispatched Calls
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Answered Within 10 Seconds
       series2-min:
       series2-max:
+      series2-useCsvMetricForXaxisLabel: 
