--- a/_data/atlanta-fire-rescue.yml
+++ b/_data/atlanta-fire-rescue.yml
@@ -17,7 +17,8 @@
       series1-label: Total Fire Calls For Service
       series1-min:
       series1-max:
-
+      series1-useCsvMetricForXaxisLabel:
+      
     - title: Fire Response Performance
       summary: Of all of the fire calls for service responded to in a given month, 90% of the time the responders were able to leave the station (turnout time) and arrive at the incident (first due response time) in the listed time or less. Data on response times are presented at the 90th percentile, which is consistent with the practices of the Commission on Fire Accreditation International.  A traditional “average” (mean, median or mode) does not give the best indication of the distribution of the data (i.e. outliers).
       description: Since the Department started tracking this metric in July 2014, 90th percentile turnout times have ranged from 110 seconds to 128 seconds.  First due response times have ranged from 435 seconds to 482 seconds.
@@ -34,6 +35,7 @@
       series1-label: Seconds
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
 
 - group-title: Section II - EMS
   group-description:
@@ -54,6 +56,7 @@
       series1-label: Total EMS Calls For Service
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
 
     - title: EMS Response Performance
       summary: Of all of the EMS calls for service responded to in a given month, 90% of the time the responders were able to leave the station (turnout time) and arrive at the incident (first due response time) in the listed time or less. Data on response times are presented at the 90th percentile, which is consistent with the practices of the Commission on Fire Accreditation International.  A traditional “average” (mean, median or mode) does not give the best indication of the distribution of the data (i.e. outliers).
@@ -71,3 +74,4 @@
       series1-label: Seconds
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
