--- a/_data/aviation.yml
+++ b/_data/aviation.yml
@@ -17,12 +17,14 @@
       series1-label: Total Passenger Volume Year-To-Date
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Year-over-Year Volume Change
       series2-min:
       series2-max:
+      series2-useCsvMetricForXaxisLabel:
 
     - title: Year-To-Date Cargo Volume
       summary: Total year-to-date cargo volume  (blue, left) and the year-over-year percentage change in cargo volume (red, right)
@@ -40,12 +42,14 @@
       series1-label: Total Cargo Volume Year-To-Date
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Year-over-Year Volume Change
       series2-min:
       series2-max:
+      series2-useCsvMetricForXaxisLabel:
 
 - group-title: Section II - Processing and Wait Times
   group-description:
@@ -66,6 +70,7 @@
       series1-label: Under Target Wait Time
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
 
     - title: Average Customs Processing Times
       summary: The average time it takes for an inbound passenger to get processed through customs
@@ -83,3 +88,4 @@
       series1-label: Minutes
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
