--- a/_data/municipal-court.yml
+++ b/_data/municipal-court.yml
@@ -17,12 +17,14 @@
       series1-label: Cases filed
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Disposed of within 10 days
       series2-min:
       series2-max:
+      series2-useCsvMetricForXaxisLabel:
 
 - group-title: Section II - Traffic Cases
   group-description:
@@ -43,9 +45,11 @@
       series1-label: Cases filed
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Disposed of within 10 days
       series2-min:
       series2-max:
+      series2-useCsvMetricForXaxisLabel:
