--- a/_data/watershed-management.yml
+++ b/_data/watershed-management.yml
@@ -17,12 +17,14 @@
       series1-label: Total Service Requests
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
       series2-min:
       series2-max:
+      series2-useCsvMetricForXaxisLabel:
 
     - title: Turning On New Account Service Requests
       summary: This figure measures the number of new customer account requests that DWM receives each month. It also measures the Department’s responsiveness in activating those accounts within 24 hours of the request being made.
@@ -40,12 +42,14 @@
       series1-label: Total Service Requests
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
       series2-min:
       series2-max:
+      series2-useCsvMetricForXaxisLabel:
 
 
     - title: Meter Investigation Service Requests
@@ -64,12 +68,14 @@
       series1-label: Total Service Requests
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
       series2-min:
       series2-max:
+      series2-useCsvMetricForXaxisLabel:
 
     - title: Street Flooding Inspection Service Requests
       summary: This figure measures DWM’s responsiveness to customer service calls about water pooling in city streets. Because this pooling can be a symptom of several different problems, the first course of action is always for Watershed staff to inspect the site and determine the root cause of the problem. DWM has a goal of responding to all such customer calls and initiating an inspection within 4 hours.
@@ -87,12 +93,14 @@
       series1-label: Total Service Requests
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Inspected Within Target Timeframe
       series2-min:
       series2-max:
+      series2-useCsvMetricForXaxisLabel:
 
 
     - title: Drinking Water Quality Complaint Service Requests
@@ -111,12 +119,14 @@
       series1-label: Total Service Requests
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
       series2-min:
       series2-max:
+      series2-useCsvMetricForXaxisLabel:
 
 - group-title: Section II - Billing
   group-description:
@@ -137,6 +147,7 @@
       series1-label: Percent Estimated Bills
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
 
     - title: Billing Complaints per 1000 Accounts
       summary: This figure shows the number of billing complaints the Department receives from customers each month.
@@ -154,6 +165,7 @@
       series1-label: Complaints per 1000 Accounts
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
 
 - group-title: Section III - Infrastructure
   group-description:
@@ -174,6 +186,7 @@
       series1-label: Number
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
 
 - group-title: Section IV - Compliance
   group-description:
@@ -194,3 +207,4 @@
       series1-label: Percentage of Days in Compliance
       series1-min:
       series1-max:
+      series1-useCsvMetricForXaxisLabel:
