--- a/_data/atlanta-fire-rescue.yml
+++ b/_data/atlanta-fire-rescue.yml
@@ -10,6 +10,7 @@
       datasource: fire_calls_for_service
       targetBenchmark:
       targetLabel:
+      targetSeries:
       series-grouping: false
       series1-metric: Result
       series1-type: column
@@ -18,7 +19,7 @@
       series1-min:
       series1-max:
       series1-useCsvMetricForXaxisLabel:
-      
+
     - title: Fire Response Performance
       summary: Of all of the fire calls for service responded to in a given month, 90% of the time the responders were able to leave the station (turnout time) and arrive at the incident (first due response time) in the listed time or less. Data on response times are presented at the 90th percentile, which is consistent with the practices of the Commission on Fire Accreditation International.  A traditional “average” (mean, median or mode) does not give the best indication of the distribution of the data (i.e. outliers).
       description: Since the Department started tracking this metric in July 2014, 90th percentile turnout times have ranged from 110 seconds to 128 seconds.  First due response times have ranged from 435 seconds to 482 seconds.
@@ -28,6 +29,7 @@
       datasource: fire_response
       targetBenchmark:
       targetLabel:
+      targetSeries:
       series-grouping: true
       series1-metric: Result
       series1-type: line
@@ -49,6 +51,7 @@
       datasource: ems_calls_for_service
       targetBenchmark:
       targetLabel:
+      targetSeries:
       series-grouping: false
       series1-metric: Result
       series1-type: column
@@ -67,6 +70,7 @@
       datasource: ems_response
       targetBenchmark:
       targetLabel:
+      targetSeries: 
       series-grouping: true
       series1-metric: Result
       series1-type: line
