--- a/_data/parks-and-rec.yml
+++ b/_data/parks-and-rec.yml
@@ -10,6 +10,7 @@
       datasource: dpr_customer_service
       targetBenchmark:
       targetLabel:
+      targetSeries:
       series-grouping: false
       series1-metric: Volume
       series1-type: column
@@ -35,6 +36,7 @@
       datasource: dpr_arborist
       targetBenchmark:
       targetLabel:
+      targetSeries:
       series-grouping: false
       series1-metric: Volume
       series1-type: column
@@ -60,6 +62,7 @@
       datasource: dpr_forestry
       targetBenchmark:
       targetLabel:
+      targetSeries:
       series-grouping: false
       series1-metric: Volume
       series1-type: column
@@ -85,6 +88,7 @@
       datasource: dpr_skilled
       targetBenchmark:
       targetLabel:
+      targetSeries:
       series-grouping: false
       series1-metric: Volume
       series1-type: column
@@ -113,6 +117,7 @@
       datasource: park_maintenance
       targetBenchmark:
       targetLabel:
+      targetSeries:
       series-grouping: true
       series1-metric: Result
       series1-type: line
@@ -134,6 +139,7 @@
       datasource: rec_center_attendance
       targetBenchmark:
       targetLabel:
+      targetSeries:
       series-grouping: true
       series1-metric: Result
       series1-type: column
@@ -150,6 +156,7 @@
       datasource: rec_center_memberships
       targetBenchmark:
       targetLabel:
+      targetSeries:
       series1-metric: Result
       series1-type: column
       series1-format: number
@@ -167,6 +174,7 @@
       datasource: youth_programming
       targetBenchmark:
       targetLabel:
+      targetSeries: 
       series-grouping: true
       series1-metric: Result
       series1-type: column
