--- a/_data/atlanta-police-department.yml
+++ b/_data/atlanta-police-department.yml
@@ -44,7 +44,7 @@
   charts:
     - title: Total Dispatched Calls and Call Answering Performance
       summary: The City of Atlanta e911 center handles all emergency calls made within city limits. Many of the calls require the dispatching of police services (volume reflected in the blue bar chart below). The center prides itself on being able to answer emergency calls as quickly as possible and actively measures the percent of calls it answers within 10 seconds (red) per industry standards.
-      description: The City’s e911 center has consistently answered at least 90% of emergency calls within 10 seconds for the last 3 years. This performance vs. an industry standard benchmark demonstrates the center's commitment to technology, efficiency and staffing to respond to the emergency needs of citizens.
+      description:
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: APD
@@ -64,6 +64,6 @@
       series2-type: line
       series2-format: percentage
       series2-label: Answered Within 10 Seconds
-      series2-min:
-      series2-max:
+      series2-min:0
+      series2-max:1
       series2-useCsvMetricForXaxisLabel: true
