--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,6 @@ highlighter: pygments
 permalink: /:categories/:title.html
 
 exclude:
-  - Gemfile
-  - Gemfile.lock
+  - /Gemfile
+  - /Gemfile.lock
+  - /vendor
