--- a/_data/atlanta-police-department.yml
+++ b/_data/atlanta-police-department.yml
@@ -3,7 +3,7 @@
   charts:
     - title: Change in crime across City of Atlanta
       summary: The FBI collects information on major crimes from agencies across the United States and the Atlanta Police Department is no exception. The year to date (YTD) change in total major crimes vs. the year before (blue) reported by the Atlanta Police Department (APD) is shown below. Major crimes are tracked based on the FBI's Uniform Crime Reporting (UCR) definition, and includes violent crime (murder and nonnegligent manslaughter, rape, robbery, and aggravated assault) and property crime (burglary, larceny-theft, arson and motor vehicle theft).
-      description: Atlanta saw reductions in crime in 2012 and 2013 (-7% and -4%) and in 2014 crime is on pace to decrease by a further 4-5%. Crime in the city is at its lowest level since the 1960's, and the City is on track to meet its target of a 25% reduction in crime during Mayor Reed's administration.
+      description: Crime in the city is at its lowest level since the 1960's, and the City is on track to meet its target of a 25% reduction in crime during Mayor Reed's administration.
       note:  Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: APD
@@ -22,7 +22,7 @@
 
     - title: Change in crime By Police Zone
       summary: APD organizes its field division into 6 administrative zones.  APD actively monitors changes and compares crime across these different zones as part of its improvement efforts.  The YTD change in major crimes, as defined by the FBI, compared to the year before for each zone is shown below.
-      description: So far in 2014, all 6 zones are seeing a reduction in crime compared to last year.
+      description:
       note: Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.  To toggle specific zones on or off in the chart, click on the appropriate zone number is the chart legend.
       size: full
       department: APD
